test/testdata/classes/methods/static/property_accessors/setter_too_many_params_error.lox
class Foo {
  static get bar() {}

  // error: property setter can only have one parameter
  // lint error: property setter can only have one parameter
  static set bar(x, y) {
    _ = x;
    _ = y;
  }
}

_ = Foo;
